--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/rosivanov/postcss-print-zindex",
   "dependencies": {
+    "chalk": "^1.1.3",
+    "cli-table": "^0.3.1",
     "postcss": "^5.2.6"
   },
   "devDependencies": {
